--- a/thanks.html
+++ b/thanks.html
@@ -2,37 +2,45 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="author" content="Untree.co" />
-        <link rel="shortcut icon" href="favicon.png" />
-
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+        <title>Advocorium</title>
         <meta name="description" content="" />
-        <meta name="keywords" content="bootstrap, bootstrap5" />
+        <meta name="keywords" content="" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <!-- Favicons -->
+        <link href="assets/img/favicon.png" rel="icon" />
+        <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com" rel="preconnect" />
+        <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="fonts/icomoon/style.css" />
-        <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
-
+        <!-- Vendor CSS Files -->
         <link
+            href="assets/vendor/bootstrap/css/bootstrap.min.css"
             rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+        />
+        <link
+            href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+            rel="stylesheet"
+        />
+        <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+        <link
+            href="assets/vendor/swiper/swiper-bundle.min.css"
+            rel="stylesheet"
+        />
+        <link
+            href="assets/vendor/glightbox/css/glightbox.min.css"
+            rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="css/tiny-slider.css" />
-        <link rel="stylesheet" href="css/aos.css" />
-        <link rel="stylesheet" href="css/glightbox.min.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/thanks.css" />
-
-        <link rel="stylesheet" href="css/flatpickr.min.css" />
-
-        <title>ClarityCounsel</title>
+        <!-- Main CSS File -->
+        <link href="assets/css/main.css" rel="stylesheet" />
+        <link href="assets/css/thanks.css" rel="stylesheet" />
     </head>
     <body>
         <div class="content">
